# hello_cmake

./: CMake学习笔记.md
v1/: .gitignore  CMakeLists.txt  cmake_build.ps1  cmake_build.sh  gxx_build.ps1  gxx_build.sh  mult.cpp  sub.cpp
v2/: CMakeLists.txt  cmake_build.ps1  cmake_build.sh  div.cpp
v3/: CMakeLists.txt  add.cpp  cmake_build.ps1  cmake_build.sh
v4/: CMakeLists.txt  cmake_build.ps1  cmake_build.sh
v4/include/: head.h
v4/src/: main.cpp
